Update manifest description.

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
   "name": "WaniKaniKeebi",
   "version": "1.0",
-  "description": "Auto-expand WaniKani's info when you submit an answer, because using a mouse is the worst.",
+  "description": "Auto-expand WaniKani's Item Info pane when you submit an answer during reviews, because using a mouse is the worst.",
   "icons": {
     "48": "icons/wkk-48.png"
   },
