--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
 {
   "manifest_version": 2,
   "name": "WaniKaniKeebi",
-  "version": "1.1",
+  "version": "1.0.2",
   "description": "Auto-expand WaniKani's Item Info pane when you submit an answer during reviews, because using a mouse is the worst.",
+  "homepage_url": "https://github.com/carwin/WaniKaniKeebi",
   "icons": {
     "48": "icons/wkk-48.png"
   },
